--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -38,7 +38,7 @@
         },
         {
           "name": "LLVM_DIR",
-          "value": "LLVM_DIR-NOTFOUND",
+          "value": "W:/Swift",
           "type": "PATH"
         },
         {
@@ -335,6 +335,81 @@
           "name": "SWIFT_WINDOWS_x86_64_ICU_UC_INCLUDE",
           "value": "",
           "type": "STRING"
+        },
+        {
+          "name": "CMAKE_C_FLAGS",
+          "value": "W:/DWIN32 /D_WINDOWS /W3",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_C_FLAGS_MINSIZEREL",
+          "value": "W:/MD /O1 /Ob1 /DNDEBUG",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_C_FLAGS_DEBUG",
+          "value": "W:/MDd /Zi /Ob0 /Od /RTC1",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_C_FLAGS_RELEASE",
+          "value": "W:/MD /O2 /Ob2 /DNDEBUG",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_C_FLAGS_RELWITHDEBINFO",
+          "value": "W:/MD /Zi /O2 /Ob1 /DNDEBUG",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_C_STANDARD_LIBRARIES",
+          "value": "W:kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_CXX_FLAGS",
+          "value": "W:/DWIN32 /D_WINDOWS /W3 /GR /EHsc",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_CXX_FLAGS_DEBUG",
+          "value": "W:/MDd /Zi /Ob0 /Od /RTC1",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_CXX_FLAGS_MINSIZEREL",
+          "value": "W:/MD /O1 /Ob1 /DNDEBUG",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_CXX_FLAGS_RELEASE",
+          "value": "W:/MD /O2 /Ob2 /DNDEBUG",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_CXX_FLAGS_RELWITHDEBINFO",
+          "value": "W:/MD /Zi /O2 /Ob1 /DNDEBUG",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_EXE_LINKER_FLAGS",
+          "value": "W:/machine:x64",
+          "type": "STRING"
+        },
+        {
+          "name": "CMAKE_EXPORT_COMPILE_COMMANDS",
+          "value": "True",
+          "type": "BOOL"
+        },
+        {
+          "name": "CMAKE_MT",
+          "value": "W:/Program Files (x86)/Windows Kits/10/bin/10.0.19041.0/x64/mt.exe",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CMAKE_RC_COMPILER",
+          "value": "W:/Program Files (x86)/Windows Kits/10/bin/10.0.19041.0/x64/rc.exe",
+          "type": "FILEPATH"
         }
       ]
     }
